sfSandBoxCode/force-app/main/default/objects/FLT_Collection_Schedule__c/FLT_Collection_Schedule__c.object-meta.xml
<CustomObject>
    <description>Store information on FLT Collection Schedules</description>
    <label>FLT Collection Schedule</label>
    <nameField>
        <label>FLT Collection Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FLT Collection Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>