sfSandBoxCode/force-app/main/default/objects/FLT_Collection_Schedule__c/fields/Missed_Collection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Missed_Collection_Reason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Missed Collection Reason</label>
    <referenceTo>Missed_Collection_Reason__c</referenceTo>
    <relationshipLabel>FLT Collection Schedule</relationshipLabel>
    <relationshipName>FLT_Collection_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>