sfSandBoxCode/force-app/main/default/objects/FLT_Collection_Schedule__c/fields/Planned_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Collection_Date__c</fullName>
    <description>Planned Collection Date</description>
    <label>Planned Collection Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>