sfSandBoxCode/force-app/main/default/objects/FLT_Collection_Schedule__c/fields/Route_Name__c.field-meta.xml
<CustomField>
    <fullName>Route_Name__c</fullName>
    <description>Route Name</description>
    <label>Route Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>