sfSandBoxCode/force-app/main/default/objects/FLT_Collection_Schedule__c/fields/Schedule_Status__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Status__c</fullName>
    <label>Schedule Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Closed by FLI</fullName>
            </value>
            <value>
                <fullName>Closure Chosen by FLO</fullName>
            </value>
            <value>
                <fullName>Collect</fullName>
            </value>
            <value>
                <fullName>DC school is closed</fullName>
            </value>
            <value>
                <fullName>Demolished</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Periodic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>