sfSandBoxCode/force-app/main/default/objects/FLT_Collection_Schedule__c/fields/Solid_Waste_Weight__c.field-meta.xml
<CustomField>
    <fullName>Solid_Waste_Weight__c</fullName>
    <label>Solid Waste Weight</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>