sfSandBoxCode/force-app/main/default/objects/FLT_Collection_Schedule__c/fields/Toilet__c.field-meta.xml
<CustomField>
    <fullName>Toilet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Toilet</label>
    <referenceTo>Toilet__c</referenceTo>
    <relationshipLabel>FLT Collection Schedule</relationshipLabel>
    <relationshipName>FLT_Collection_Schedule</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>