sfSandBoxCode/force-app/main/default/objects/FLT_Collection_Schedule__c/fields/Toilet_Name__c.field-meta.xml
<CustomField>
    <fullName>Toilet_Name__c</fullName>
    <formula>Toilet__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Toilet Name</label>
    <type>Text</type>
</CustomField>