sfSandBoxCode/force-app/main/default/objects/FLT_Collection_Schedule__c/fields/Urine_Weight__c.field-meta.xml
<CustomField>
    <fullName>Urine_Weight__c</fullName>
    <label>Urine Weight</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>