sfSandBoxCode/force-app/main/default/objects/FLT_Collection_Schedule__c/listViews/All_Schedules.listView-meta.xml
<ListView>
    <fullName>All_Schedules</fullName>
    <columns>NAME</columns>
    <columns>Toilet_Name__c</columns>
    <columns>Toilet__c</columns>
    <columns>Planned_Collection_Date__c</columns>
    <columns>Schedule_Status__c</columns>
    <columns>Route_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Day__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Schedules</label>
    <language>en_US</language>
</ListView>