sfSandBoxCode/force-app/main/default/objects/FLT_Collection_Schedule__c/listViews/Next_Week.listView-meta.xml
<ListView>
    <fullName>Next_Week</fullName>
    <columns>NAME</columns>
    <columns>Day__c</columns>
    <columns>Planned_Collection_Date__c</columns>
    <columns>Route_Name__c</columns>
    <columns>Schedule_Status__c</columns>
    <columns>Toilet__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Planned_Collection_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_WEEK</value>
    </filters>
    <label>Next Week</label>
    <language>en_US</language>
</ListView>